mosquitto/base/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limited-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  policyTypes:
  - Egress
  - Ingress
  egress: []
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 1883
